<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLocActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:inputType="text" />

        <Button
            android:id="@+id/AddLocationB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Location" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>