...
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:saveEnabled="false"
            android:text="@string/dark_switch" />

        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />

        <Button
            android:id="@+id/buttonRemoveLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remove a location" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
